@@ -7,7 +7,7 @@ OVERVIEW
     3.09.4, 3.10, 3.10.0, 3.10.1, 3.10.2, 3.10.3, 3.11, 3.11.0, 3.11.1,
     3.12.0.
 
-  This Camlp5 version is 5.12.
+  This Camlp5 version is 5.13.
 
   Camlp5 must be compiler either in "transitional mode" or in "strict mode".
   See the file MODE for information.
